# bauplan-lambda

./: .gitignore  README.md  install.sh  lambda_builder.py  lambda_function.py  main.py  pyproject.toml  requirements.txt  utils.py
examples/: example.py  other.py
src/bauplan/: lambda_builder.py  lambda_function.py  utils.py
