[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bauplan lambda"
version = "0.0.1"
authors = [
  { name="Brian Yeh", email="heynairb@gmail.com" },
]
description = "A decorator library enabling you to encapsulate python code into an aws lambda automatically."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
    "Operating System :: Linux",
]